2003-05-29  Brian Warner  <warner@lothar.com>

	* twisted/python/formmethod.py: this module needs False from compat

	* twisted/internet/process.py (ProcessWriter.writeSomeData):
	Accomodate Mac OS-X, which sometimes raises OSError(EAGAIN)
	instead of IOError(EAGAIN) when the pipe is full.

2003-05-27  Brian Warner  <warner@lothar.com>

	* twisted/test/test_process.py (EchoProtocol): try to close
	occasional test failure. Do transport.closeStdin() instead of
	loseConnection() because the child still has data to write (to
	stderr). Closing all three streams takes away its voice, forces it
	to exit with an error, and is probably causing problems.

	* twisted/test/test_factories.py (testStopTrying): stop test after
	5 seconds rather than 2000 iterations. Some reactors iterate at
	different rates.

2003-05-24  Brian Warner  <warner@lothar.com>

	* twisted/scripts/trial.py (Options.opt_testmodule): ignore
	deleted files, recognize twisted/test/* files as test cases

2003-05-22  Brian Warner  <warner@lothar.com>

	* twisted/test/test_newjelly.py (JellyTestCase.testUnicode): make
	sure unicode strings don't mutate into plain ones

2003-05-21  Brian Warner  <warner@lothar.com>

	* twisted/internet/tcp.py (Connection.getTcpKeepAlive): Add
	functions to control SO_KEEPALIVE bit on TCP sockets.
	* twisted/internet/interfaces.py (ITCPTransport): ditto
	* twisted/test/test_tcp.py (LoopbackTestCase.testTcpKeepAlive):
	test it

	* doc/howto/test-standard.html: document test-case-name format

	* doc/howto/coding-standard.html: encourage test-case-name tags

	* twisted/protocols/htb.py, twisted/protocols/irc.py,
	twisted/protocols/pcp.py, twisted/python/text.py,
	twisted/spread/pb.py, twisted/trial/remote.py: clean up
	test-case-name tags

	* twisted/scripts/trial.py (Options.opt_testmodule): try to handle
	test-case-name tags the same way emacs does

2003-05-21  Christopher Armstrong  <radix@twistedmatrix.com>

	* bin/coil, doc/man/coil.1, doc/man/index.html: removed. Coil